fixing alignment

--- a/views/public/CSS/layout.css
+++ b/views/public/CSS/layout.css
@@ -1,35 +1,114 @@
+body{
+  
+  width: fit-content;
+  margin: 0 45 0 45;
+  justify-content: space-evenly;
+
+}
+
 .innerContainer{
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   flex-direction: row;
   text-align:;
   /* margin-top: 80%; */
   font-style: italic;
   text-transform: none;
-  widows: 800px;
+  width: auto;
+  min-width: 600px;
+  height: auto;
   margin-top: 200px;
   border-color:  black;
+  
   
 
   
 }
 
-.flex-harlenContainer,
-.flex-allyContainer,
-.flex-tylerContainer,
-.flex-andrewContainer{
-  max-width: 500px;
+.flex-harlenContainer{
+  background-image: url(../img/harlen.png) ;
+  z-index: 40;
+  overflow: hidden;
+  flex-wrap: text-transform, border-spacing, flex-grow, object-fit;
+  max-width: 700px;
+  min-height: 360px;
+  z-index: 1;
   box-shadow: 20px black;
   border-color: black;
   overflow: hidden;
-  background-image: url(../img/profileBackground.jpg),url('../img/forground.png') ;
+  background-image: url(../img/profileBackground.jpg),url('../img/forground.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-position: 50% 50%;
-  background-image: , z-index: inherit 1;
+  background-image:  z-index: inherit 1;
+  height
+}
+
+.flex-allyContainer{
+  
+  flex-wrap: text-transform: border-spacing: flex-grow: object-fit: ;
+  max-width: 700px;
+  min-height: 100vh
+  z-index: 1;
+  box-shadow: 20px black;
+  border-color: black;
+  overflow: hidden;
+  background-image: url(../img/profileBackground.jpg),url('../img/forground.png');
+  background-size: contain;
+  
+  background-repeat: no-repeat;
+  background-position: center;
+  /* background-position: 50% 50%; */
+  /* background-image:  z-index: inherit 1; */
   
 }
+.flex-tylerContainer{
+  flex-wrap: text-transform: border-spacing: flex-grow: object-fit: ;
+  max-width: 700px;
+  min-height: 100vh
+  z-index: 1;
+  box-shadow: 20px black;
+  border-color: black;
+  overflow: hidden;
+  background-image: url(../img/profileBackground.jpg),url('../img/forground.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position: 50% 50%;
+  background-image:  z-index: inherit 1;
+
+}
+.flex-andrewContainer{
+  max-width: 700px;
+  min-height: 100vh
+  z-index: 1;
+  box-shadow: 20px black;
+  border-color: black;
+  overflow: hidden;
+  background-image: url(../img/profileBackground.jpg),url('../img/forground.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position: 50% 50%;
+  background-image:  z-index: inherit 1;
+  
+}
+
+p{
+  z-index: 100;
+}
+
+h1{
+  position: relative;
+  /* display: ; */
+  /* image-rendering: pixelated; */
+  background-image: url(../img/forground.png);
+  /* z-index: 100; */
+  /* height: auto; */
+}
+
 
 
 
@@ -49,8 +128,9 @@
 
 header{
   background-image: url('../img/closedHeader.jpg');
+  background-repeat: no-repeat;
   width: auto;
-  height: auto;
+  height: 400rem;
   align-content: center;
 
   /* justify-content: center; */
@@ -60,82 +140,18 @@ header{
 
 }
 footer {
-  position: fixed;
+  margin: 0 45 0 45;
+  align-content: center;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: auto;
   margin-top: auto;
   border: solid 1px black;
 }
-footer h1{
+/* footer h1{
   display: flex;
   justify-content: flex-start;
   align-content: center;
   overflow-wrap: break-word;
 }
-
-.flex-container {
-  /* display: flex; */
-  /* justify-content:space-between ; */
-  /* padding: 0px 12px 0px 12px; */
-  /* width: 540px; */
-  /* height: 1px; */
-  /* box-shadow: 0 0 8px 8px white inset; */
-} 
-/* 
-body{ */
-  /* display: flexbox;
-  justify-content: center; 
-  background-image: ;  */
-
-  /* background-image: url('../img/cinema.jpg')  ; */
-  /* max-width: 960px;
-  height: 540px;
-  z-index: -2; */
-  
-/* } */
-/* #aboutUs{
-  color: blue;
-  width: 100px;
-  height: 50px;
-  box-shadow: 0px clear;
-  transform: translateY(5px);
-  padding: 2px 2px;
-  font-size: 2px;
-  text-align: center;
-	cursor: pointer;
-	/* margin-top: 300px; */
-  /* outline: none;
-  color: #fff;
-  background-color: clear;
-  border: none;
-  border-radius: 1px;
-	box-shadow: 0px black; */ 
-	/* max-height: calc(100% - 5px); */
-}
-
-/* .flex-container{
-  /* background-image: url('../img/deadpolreru.png'); */
-  /* width: 300px; */
-  /* height: auto; */
-  /* align-content: ;
-  z-index: 1;
-
-  transform: translate(-50%, -50%); */
-/* } */ 
-
-
-/* .nav {
-  padding: 15px 25px;
-	font-size: 20px;
-	text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: rgba(0, 0, 0, 0.726);
-  background-color: rgb(188, 198, 202);
-  border: none;
-  border-radius: 15px;
-	box-shadow: 0 9px 0 2px rgb(58, 49, 49); */
-	/* float: right; */
-	/* margin: -50px 0px 0px 50px; */
-/* } */
+ */
